--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,9 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 [extensions]
 HelpPlotsExt = "Plots"
 
+[compat]
+julia = "1.9"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
